Fix bitblit operation for paint device that starts at 0,0

Fixes glitches when bitbliting gmic result on moved layer with selection

BUG:325771